# sdltriangle

./: CMakeLists.txt
src/: main.cpp  vec_math.hpp
